--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/ExhibitionBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/ExhibitionBuild.data.gz",
-        frameworkUrl: buildUrl + "/ExhibitionBuild.framework.js.gz",
-        codeUrl: buildUrl + "/ExhibitionBuild.wasm.gz",
+        dataUrl: buildUrl + "/ExhibitionBuild.data.br",
+        frameworkUrl: buildUrl + "/ExhibitionBuild.framework.js.br",
+        codeUrl: buildUrl + "/ExhibitionBuild.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DolgionValentin",
         productName: "DogDays",
